--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "gsap": "^3.12.5",
     "next": "^14.2.15",
+    "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-animations": "^1.0.0",
     "react-dom": "^18.3.1",
